Changes in robCompositions version 2.0.4
  + aDist now again works for vectors
  + added following data sets: socExp, cancerNM, employment, employment_df, instw, isic32, mortality_tab, precipitation and rcodes
  + corrected documentation for ageCatWorld data
  + new functions coord, gmean, gmean_sum, ilr.2x2, ind2x2, indTab, int2x2, indTab, int2x2, intArray, intTab, pTab, rSDev, rSDev.test.R, SDev, stats

Changes in robCompositions version 2.0.3
  + new function perturbation() and powering()
  + new function for inner product (iprod())
  + new funciton balances()
  + addLR, cenLR with optional different base in logrithm
  + isomLR with more possibilites for a normalizing constant
  + isomLR depricated, using now pivotCoord instead
  + isomLRinv depricated, using pivotCoordInv instead
  + orthbasis() now returns also the basis vectors
  + bug in aDist solved
  + aDist now much faster
  + new function center()
  + method symm (symmetric balances) in pivotCoord

Changes in robCompositions version 2.0.2
  + new function balZav()
  + new function daCoDa()
  + new function clustCoDa()
  + new function corCoDa()
  + aDist for single matrix
  + pcaCoDa() with external variables
  + new data set alcoholreg 
  + new data set alcohol
  + new data set econom        
  + new data set ageCatWorld
  + new data set election
  + new data set laborForce
  + new data set payments

Changes in robCompositions version 2.0.1
  + discriminant analysis (daFisher) for n-group case
  + discriminant analysis (daFisher) including predict
  + discriminant analysis (daFisher) including misclassification rates

Changes in robCompositions version 2.0.0
  + combined help for some S3methods
  + function robVariation is now called variation
  + new data sets

Changes in robCompositions version 1.9.1
  + now with roxygen2 documentation
  + minor modifications in impRZilr

Changes in robCompositions version 1.9.0
  + bug in robVariations solved

Changes in robCompositions version 1.8.0