@@ -4,14 +4,16 @@
 \alias{ternaryDiag}
 \title{Ternary diagram}
 \usage{
-ternaryDiag(x, name = colnames(x), grid = TRUE, gridCol = grey(0.6),
-  mcex = 1.2, line = "none", robust = TRUE, group = NULL, tol = 0.975,
-  ...)
+ternaryDiag(x, name = colnames(x), text = NULL, grid = TRUE,
+  gridCol = grey(0.6), mcex = 1.2, line = "none", robust = TRUE,
+  group = NULL, tol = 0.975, ...)
 }
 \arguments{
 \item{x}{matrix or data.frame with 3 columns}
 
 \item{name}{names of the variables}
+
+\item{text}{default NULL, text for each point can be provided}
 
 \item{grid}{if TRUE a grid is plotted additionally in the ternary diagram}
 
